<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/galleryFragment">
    
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.gokanaz.gallery.fragments.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />
        
    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.gokanaz.gallery.fragments.AlbumsFragment"
        android:label="@string/albums"
        tools:layout="@layout/fragment_albums" />
        
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.gokanaz.gallery.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
        
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.gokanaz.gallery.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
        
</navigation>
